# equaio

./: .gitignore  CNAME  Cargo.toml  Dioxus.toml  README.md  index.html  main.css.bak
.github/workflows/: deploy.yml
assets/: block.css  equaio.png.br  main.css  main.css.br  worksheet.css  worksheet.css.br
assets/dioxus/: equaio-dx.js  equaio-dx.js.br  equaio-dx_bg.wasm  equaio-dx_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
assets/favicon_io/: android-chrome-512x512.png.br  favicon-16x16.png.br  favicon.ico.br
src/: json.rs  main.rs  utils.rs  worksheet.rs
