[package]
name = "equaio-dx"
version = "0.1.0"
authors = ["ray-pH <rayhan.azizi9@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-logger = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
equaio = { git = "https://github.com/ray-pH/libequaio", branch = "main" }
